--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/adzmco23/UPD-Alternative-Housing#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mysql2": "^2.3.3"
   },
