--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,10 +18,13 @@
   },
   "homepage": "https://github.com/adzmco23/UPD-Alternative-Housing#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
