--- a/Backend/.env
+++ b/Backend/.env
@@ -4,17 +4,9 @@
 # They should work with the default sample database provided
 # in the sample_database folder.
 
-# DB_USER=root
-# DB_PASSWORD=password
-# DB_HOST=localhost
-# DB_PORT=3306
-# DB_DATABASE=alternative_housing
-
-# SESSION_SECRET=secret
-
-DB_USER=wsl_root
+DB_USER=root
 DB_PASSWORD=password
-DB_HOST=winhost
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=alternative_housing
 
