--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/adzmco23/UPD-Alternative-Housing#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-ensure-login": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
