--- a/Frontend/jsconfig.json
+++ b/Frontend/jsconfig.json
@@ -1,6 +1,7 @@
 {
-    "compilerOptions": {
-      "checkJs": true,
-      "jsx": "react"
+  "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"]
     }
   }
+}
