--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,7 +27,8 @@
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "rimraf": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
