--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
     "framer-motion": "^7.6.19",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
