--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "serve": "^14.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
