--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/adzmco23/UPD-Alternative-Housing#readme",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
