--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/adzmco23/UPD-Alternative-Housing#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.338.0",
+    "@aws-sdk/s3-request-presigner": "^3.338.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "connect-ensure-login": "^0.1.1",
@@ -27,10 +29,12 @@
     "express": "^4.18.2",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "rimraf": "^5.0.0"
+    "rimraf": "^5.0.0",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
